# RAG-ChocolaTech

./: README.md  SystemPrompt.md  pyproject.toml
src/: config.py  database.py  main.py
src/services/: auth_service.py  etl_service.py  rag_service.py
src/static/: index.html  script.js  style.css
